--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "browser-sync": "^2.26.3",
     "cross-env": "^5.1.5",
     "del": "^3.0.0",
+    "memory-fs": "^0.4.1",
     "node-sass": "^4.11.0",
     "shtml2html": "^1.0.5"
   }
