--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node server",
+    "start": "cross-env NODE_ENV=development node server",
     "build": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
@@ -14,7 +14,6 @@
     "browser-sync": "^2.26.3",
     "cross-env": "^5.1.5",
     "del": "^3.0.0",
-    "memory-fs": "^0.4.1",
     "node-sass": "^4.11.0",
     "shtml2html": "^1.0.5"
   }
