--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browser-sync": "^2.26.3",
     "cross-env": "^5.1.5",
     "del": "^3.0.0",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
     "shelljs": "^0.8.3",
