--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cross-env": "^5.1.5",
     "del": "^3.0.0",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.11.0",
+    "node-sass": "4.9.0",
     "postcss": "^7.0.14",
     "shelljs": "^0.8.3",
     "shtml2html": "^1.0.5"
