移除无关测试代码

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "start": "cross-env NODE_ENV=development node server",
-    "build": "cross-env NODE_ENV=production node server",
-    "demo": "node server/test.js"
+    "build": "cross-env NODE_ENV=production node server"
   },
   "browserslist": [
     "Chrome > 20",
