--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "del": "^3.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "4.9.0",
+    "opn": "^6.0.0",
     "postcss": "^7.0.14",
-    "shelljs": "^0.8.3",
     "shtml2html": "^1.0.5"
   }
 }
