--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "cross-env NODE_ENV=development node server",
-    "build": "cross-env NODE_ENV=production node server"
+    "build": "cross-env NODE_ENV=production node server",
+    "test": "node server/test.js"
   },
   "browserslist": [
     "Chrome > 20",
@@ -17,11 +18,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.26.3",
+    "chalk": "^2.4.2",
     "cross-env": "^5.1.5",
     "del": "^3.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "4.9.0",
-    "opn": "^6.0.0",
+    "open": "^6.3.0",
     "postcss": "^7.0.14",
     "shtml2html": "^1.0.5"
   }
